sumo/tests/duarouter/alternatives/style1_input/errors/xml/no_end/errors.duarouter
Error: The input ended before all started tags were ended. Last tag started was 'route-alternatives'
 In file 'input_alts.rou.xml.alt'
 At line/column 14/1.

Quitting (on error).
